 * Fixed: `Set-IniEntry` fails to preserve unicode characters with diacritics in INI entry names and values.
 * Fixed: `Remove-IniEntry` fails to preserve unicode characters with diacritics in INI entry names and values.
 * Fixed: `Set-HostsEntry` leaves trailing tabs and whitespace after all but the last line.
 * Fixed: `Get-PowerShellModuleInstallPath` returns wrong path for PowerShell 4.
 
## Other Improvements

 * `Test-AdminPrivilege`: changed its verbose message to a debug message.
 * `Set-HostsEntry`: 
    * only updates hosts file if it needs to change
    * added an improved verbose message when setting a hosts entry
    * improved error handling when hosts file can't be opened for reading
 * `Install-Certificate` can now install a certificate on a remote computer.
 * `Initialize-Lcm` now uses `Install-Certificate` to install the decryption certificate on the remote computer.
 * `Uninstall-Certificate` can now uninstall a certificate on a remote computer.
 * The following functions now write warning if you pass them a plain-text password. You should pass a `SecureString` instead.
    * `Install-Certificate`
    * `Initialize-Lcm`


# 2.0.1 (19 October 2015)

 * Fixed: errors importing Carbon when IIS not installed on Windows 2012 R2 and Windows 10 (fixes [issue 168: Cannot import Carbon 2.0 module due to issues with IIS related functionality](https://bitbucket.org/splatteredbits/carbon/issues/168)).
 * Fixed Carbon copyright statements.
 * Improved Carbon's module description.
 
 
# 2.0.0 (10 October 2015)

## Overview

Carbon version 2.0 is a *huge* release, with lots of new enhancements and bug fixes. We hope you like them. Carbon 2.0 now requires PowerShell 4, so it is not backwards-compatabile with Carbon 1.x. Because of this, we made some additional backwards-incompatible changes. See the `Upgrade Instructions` section for things to look out for.
